--- a/papers/GdMn2O5/bib.bib
+++ b/papers/GdMn2O5/bib.bib
@@ -1881,3 +1881,21 @@ volume = {9},
 year = {1997}
 }
 
+@article{Oh2014,
+abstract = {The manipulation of magnetic ordering with applied electric fields is of pressing interest for new magnetoelectric devices and information storage applications. Recently, such magnetoelectric control was realized in multiferroics. However, their magnetoelectric switching is often accompanied by significant hysteresis, resulting from a large barrier, separating different ferroic states. Hysteresis prevents robust switching, unless the applied field overcomes a certain value (coercive field). Here we address the role of a switching barrier on magnetoelectric control, and identify a material, collinear antiferromagnetic and pyroelectric Ni3TeO6, in which magnetoelectric switching occurs without hysteresis. The barrier between two magnetic states in the vicinity of a spin-flop transition is almost flat, and thus small changes in external electric/magnetic fields allow to switch the ferroic state through an intermediate state in a continuous manner, resulting in a colossal magnetoelectric response. This colossal magnetoelectric effect resembles the large piezoelectric effect at the morphotropic phase boundary in ferroelectrics.},
+author = {Oh, Yoon Seok and Artyukhin, Sergey and Yang, Jun Jie and Zapf, Vivien and Kim, Jae Wook and Vanderbilt, David and Cheong, Sang Wook},
+doi = {10.1038/ncomms4201},
+file = {:home/ponet/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Oh et al. - 2014 - Non-hysteretic colossal magnetoelectricity in a collinear antiferromagnet(2).pdf:pdf},
+isbn = {2041-1723},
+issn = {20411723},
+journal = {Nature Communications},
+mendeley-groups = {PhD/Multiferroics},
+pages = {1--7},
+pmid = {24469350},
+publisher = {Nature Publishing Group},
+title = {{Non-hysteretic colossal magnetoelectricity in a collinear antiferromagnet}},
+url = {http://dx.doi.org/10.1038/ncomms4201},
+volume = {5},
+year = {2014}
+}
+
